--- a/src/css/menus.css
+++ b/src/css/menus.css
@@ -29,7 +29,7 @@
   display: flex;
   align-items: center;
   flex-wrap: nowrap;
-  padding-top: 0.3rem;
+  /* padding-top: 0.4rem; */
   /* padding-bottom: 1.5rem; */
   padding-left: 0;
   margin-block: 0;
